Schema is now Catalog
Signed-off-by: Stefan Bischof <stbischof@bipolis.org>